| Summary: | ASTERISK-24967: Problem support schema for pgsql on CEL | ||
| Reporter: | Rodrigo Ramirez Norambuena (roramirez) | Labels: | |
| Date Opened: | 2015-04-15 13:38:51 | Date Closed: | 2015-05-17 14:05:43 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | CEL/cel_pgsql |
| Versions: | 11.17.1 13.3.2 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If do you have two table called with the same name for cel on distint schemas the log for fail failed.
The reason of the problem is query on get name columns for table. The log is {code} [Apr 15 01:55:45] DEBUG[12894]: cel_pgsql.c:330 pgsql_log: Inserting a CEL record: [INSERT INTO cel ("id","id","eventtype","eventtype","eventtime","eventtime","userdeftype","userdeftype","cid_name","cid_name","cid_num","cid_num","cid_ani","cid_ani","cid_rdnis","cid_rdnis","cid_dnid","cid_dnid","exten","exten","context","context","channame","channame","appname","appname","appdata","appdata","amaflags","amaflags","accountcode","accountcode","peeraccount","peeraccount","uniqueid","uniqueid","linkedid","linkedid","userfield","userfield","peer","peer") VALUES (DEFAULT,DEFAULT,'HANGUP','HANGUP','2015-04-15 04:55:45.002747','2015-04-15 04:55:45.002747','','','','','','','','','','','700','700','700','700','parkedcalls','parkedcalls','Console/dsp','Console/dsp','','','','',3,3,'','','','','1429073742.18','1429073742.18','1429073742.18','1429073742.18','','','','')]. [Apr 15 01:55:45] WARNING[12894]: cel_pgsql.c:355 pgsql_log: Failed to insert call detail record into database! {code} | ||
| Comments: | By: Rusty Newton (rnewton) 2015-05-17 14:05:43.382-0500 Closing out - a fix was merged. JIRA issues are not auto-closing at the moment. | ||