cel_pgsql: Add support set schema and fix query get columns

Add feature to set optional schema parameter on configuration file via
'schema' setting.

Fix query to get columns from table because not considered schema. If in
the database exist two table with same name in distinct schemas will
return error when to insert record.

ASTERISK-24967 #close

Change-Id: I691fd2cbc277fcba10e615f5884f8de5d8152f2c